--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -21,9 +22,24 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
+    <script src="js/index.js"></script>
 
-  <body ng-app="starter">
+</head>
+
+<body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
+<script id="image-modal.html" type="text/ng-template">
+    <div class="modal image-modal transparent" ng-click="closeModal()">
+
+        <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
+            <ion-slide ng-repeat="oImage in aImages">
+                <img ng-src="{{oImage.srclg}}" class="fullscreen-image" />
+                <p class="info">{{oImage.msg}}</p>
+            </ion-slide>
+        </ion-slide-box>
+
+    </div>
+</script>
+
 </html>
