Cleaning and Pushwoosh

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <script src="js/services.js"></script>
     <script src="lib/jstorage.js"></script>
 
+    <!--Pushwoosh js-->
+    <script type="text/javascript" src="lib/pushwoosh/PushwooshAndroid.js"></script>
+    <!--<script type="text/javascript" src="js/PushwooshiOS.js"></script>-->
+    <script type="text/javascript" src="lib/pushwoosh/index.js"></script>
 </head>
 
 <body ng-app="starter">
