--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+
     <script src="cordova.js"></script>
     <script src="lib/jquery-1.11.3.min.js"></script>
-    <script src="lib/ng-cordova.js"></script>
-    
+
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="lib/ng-cordova.min.js"></script>
+
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="lib/jstorage.js"></script>
