--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="lib/jstorage.js"></script>
+    <script src="lib/lodash.min.js"></script>
 
     <!--Pushwoosh js-->
     <script type="text/javascript" src="lib/pushwoosh/PushwooshAndroid.js"></script>
