--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,8 @@
 
     <!--Pushwoosh js-->
     <script type="text/javascript" src="lib/pushwoosh/PushwooshAndroid.js"></script>
-    <!--<script type="text/javascript" src="js/PushwooshiOS.js"></script>-->
+    <script type="text/javascript" src="lib/pushwoosh/PushwooshiOS.js"></script>
+    <script type="text/javascript" src="lib/pushwoosh/PushwooshWP.js"></script>
     <script type="text/javascript" src="lib/pushwoosh/index.js"></script>
 </head>
 
