--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 
 
     <!-- compiled css output -->
-    <link href="lib/ionic/css/ionic.app.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
