--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="lib/linearicons/icons.css">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
