--- a/www/ebs/pay.html
+++ b/www/ebs/pay.html
@@ -47,7 +47,6 @@
 					<ul>
 						<li><a href="#tabs-1">Version 3 - Standard</a></li>
 					</ul>
-
 					<div id="tabs-1">
 						<!--<form  method="post" action="validate_api.php" name="frmTransaction" id="frmTransaction" onSubmit="return validate()">-->
 						<form method="post" action="submit.php" name="frmTransaction" id="frmTransaction" onSubmit="return validate()">
@@ -55,7 +54,6 @@
 							<table width="100%" cellpadding="2" cellspacing="2" border="0">
 								<tr>
 									<th colspan="2">Transaction Details</th>
-
 								</tr>
 								<tr>
 									<td class="fieldName"><span class="error">*</span> Channel</td>
@@ -65,16 +63,14 @@
 										</select>
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName" width="50%"><span class="error">*</span> Account Id</td>
 									<td align="left" width="50%">
-										<input name="account_id" type="text" value="Your Account ID" />
+										<input name="account_id" type="text" value="19042" />
 									</td>
 								</tr>
 								<tr>
 									<td class="fieldName" width="50%"><span class="error">*</span> Reference No</td>
-
 									<td align="left" width="50%">
 										<input name="reference_no" type="text" value="223" />
 									</td>
@@ -84,9 +80,8 @@
 									<td align="left" width="50%">
 										<input name="amount" type="text" value="1.00" />
 										<select name="currency">
-											<option value="">INR</option>
-											<option value="">USD</option>
-
+											<option value="INR">INR</option>
+											<option value="USD">USD</option>
 										</select>
 									</td>
 								</tr>
@@ -107,7 +102,6 @@
 									<td align="left" width="50%">
 										<input name="display_currency_rates" type="text" value="1" />
 									</td>
-
 								</tr>
 								<tr>
 									<td class="fieldName" width="50%"><span class="error">*</span> Description</td>
@@ -119,14 +113,13 @@
 									<td class="fieldName"><span class="error">*</span> Return Url</td>
 
 									<td align="left">
-										<input name="return_url" type="text" size="60" value="http://localhost/ebs/response.php" /> </td>
+										<input name="return_url" type="text" size="60" value="http://swaap.com/paymentgateway/ebs/response.php" /> </td>
 								</tr>
 								<tr>
 									<td class="fieldName"><span class="error">*</span> Mode</td>
 									<td align="left">
 										<select name="mode">
 											<option value="TEST">TEST</option>
-
 											<option value="LIVE" selected>LIVE</option>
 										</select>
 									</td>
@@ -135,14 +128,12 @@
 									<td class="fieldName">Payment Mode</td>
 									<td align="left">
 										<select name="payment_mode">
-
 											<option value="">All</option>
 											<option value="1">Credit Card</option>
 											<option value="2">Debit Card</option>
 											<option value="3">Net Banking</option>
 											<option value="4">Cash Card</option>
 											<option value="5">Credit Card - EMI</option>
-
 											<option value="6">Credit Card - Reward Point</option>
 											<option value="7">Paypal</option>
 										</select>
@@ -150,7 +141,6 @@
 								</tr>
 								<tr>
 									<td class="fieldName">Card Brand</td>
-
 									<td align="left">
 										<select name="card_brand">
 											<option value="">All</option>
@@ -158,7 +148,6 @@
 											<option value="2">MasterCard</option>
 											<option value="3">Maestro</option>
 											<option value="4">Diners Club</option>
-
 											<option value="5">American Express</option>
 											<option value="6">JCB</option>
 										</select>
@@ -166,7 +155,6 @@
 								</tr>
 								<tr>
 									<td class="fieldName">Payment Option</td>
-
 									<td align="left">
 										<input name="payment_option" type="text" value="" />
 									</td>
@@ -175,7 +163,6 @@
 									<td class="fieldName">Bank Code</td>
 									<td align="left">
 										<input name="bank_code" type="text" value="" />
-
 									</td>
 								</tr>
 								<tr>
@@ -184,7 +171,6 @@
 										<input name="emi" type="text" value="" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName">Page ID</td>
 									<td align="left">
@@ -193,154 +179,119 @@
 								</tr>
 								<tr>
 									<th colspan="2">Billing Address</th>
-
 								</tr>
-
 								<tr>
 									<td class="fieldName"><span class="error">*</span> Name</td>
 									<td align="left">
 										<input name="name" type="text" value="John Raj" />
 									</td>
 								</tr>
-
 								<tr>
-
 									<td class="fieldName"><span class="error">*</span>Address</td>
 									<td align="left">
 										<textarea name="address">Arcot Road</textarea>
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName"><span class="error">*</span>City</td>
-
 									<td align="left">
 										<input name="city" type="text" value="Chennai" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName">State/Province</td>
 									<td align="left">
 										<input name="state" type="text" value="Tamil Nadu" />
-
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName"><span class="error">*</span>ZIP/Postal Code</td>
 									<td align="left">
 										<input name="postal_code" type="text" value="600001" />
 									</td>
-
 								</tr>
-
 								<tr>
 									<td class="fieldName"><span class="error">*</span>Country</td>
 									<td align="left">
 										<input name="country" type="text" value="IND" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName"><span class="error">*</span>Email</td>
 									<td align="left">
-										<input name="email" type="text" value="" />
+										<input name="email" type="text" value="jagruti@wohlig.com" />
 									</td>
 								</tr>
-
 								<tr>
-
 									<td class="fieldName">Telephone</td>
 									<td align="left">
 										<input name="phone" type="text" value="04423452345" />
 									</td>
 								</tr>
-
 								<tr>
 									<th colspan="2">Delivery Address</th>
 								</tr>
-
 								<tr>
-
 									<td class="fieldName"> Name</td>
 									<td align="left">
 										<input name="ship_name" type="text" value="John Esak" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName">Address</td>
 									<td align="left">
-
 										<input name="ship_address" type="text" value="Arcot Road" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName">City</td>
 									<td align="left">
 										<input name="ship_city" type="text" value="Chennai" />
 									</td>
-
 								</tr>
-
 								<tr>
 									<td class="fieldName">State/Province</td>
 									<td align="left">
 										<input name="ship_state" type="text" value="Tamil Nadu" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName">ZIP/Postal Code</td>
 									<td align="left">
 										<input name="ship_postal_code" type="text" value="600001" />
 									</td>
 								</tr>
-
 								<tr>
 									<td class="fieldName">Country</td>
-
 									<td align="left">
 										<input name="ship_country" type="text" value="IND" />
 									</td>
 								</tr>
-
-
 								<tr>
 									<td class="fieldName">Telephone</td>
 									<td align="left">
 										<input name="ship_phone" type="text" value="04423452345" />
 									</td>
 								</tr>
-
 								<tr>
-
 									<td valign="top" align="center" colspan="2">
 										<input name="submitted" value="Submit" type="submit" />&nbsp;
-
 										<input value="Reset" type="reset" />
 									</td>
 								</tr>
-
 								<tr>
 									<td valign="top" align="center" colspan="2">
 										<span class="error">*</span>
 										<span>denotes required field</span>
-
 									</td>
 								</tr>
 							</table>
 						</form>
 					</div>
-
-
 				</div>
 			</th>
 		</tr>
 	</table>
-
 </body>
 
 </html>
