--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,8 @@
   <script src="js/services.js"></script>
   <script src="lib/jstorage.js"></script>
   <script src="lib/lodash.min.js"></script>
+  <script src="lib/moment.js"></script>
+  <script src = ""></script>
 
   <!--Pushwoosh js-->
   <!-- <script type="text/javascript" src="lib/pushwoosh/PushwooshAndroid.js"></script> -->
