--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
   <script src="lib/jquery-1.11.3.min.js"></script>
 
   <!-- your app's js -->
